force-app/main/default/objects/OneCRM__Payment_Program__c/OneCRM__Payment_Program__c.object-meta.xml
<CustomObject>
    <description>Represents a schedule by which repeat payments will automatically be processed. Parent for all of the corresponding Payment and Charge records.</description>
    <label>Payment Program</label>
    <nameField>
        <label>Payment Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>