force-app/main/default/objects/OneCRM__Payment_Program__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy_Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>