force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Amount_Per_Charge__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Amount_Per_Charge__c</fullName>
    <description>The amount to be paid in each Charge.</description>
    <inlineHelpText>The amount to be paid in each Charge.</inlineHelpText>
    <label>Amount Per Charge</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>