force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Campaign__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Campaign</description>
    <inlineHelpText>Related Campaign</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Payment Programs</relationshipLabel>
    <relationshipName>Payment_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>