force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Charge_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Charge_Start_Date__c</fullName>
    <description>The date of the first payment. The Schedule determines all payments relative to this date.</description>
    <inlineHelpText>The date of the first payment. The Schedule determines all payments relative to this date.</inlineHelpText>
    <label>Charge Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>