force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Charges_Remaining__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Charges_Remaining__c</fullName>
    <description>The number of Charges this Payment Program will generate. Infinite if negative.</description>
    <inlineHelpText>Use -1 to schedule an indefinite number of Charges. Otherwise, the number of Charges remaining on this Payment Program.</inlineHelpText>
    <label>Charges Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>