force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Deactivation_Reason__c</fullName>
    <description>An explanation of why this Payment Program was last changed from Active to Inactive.</description>
    <inlineHelpText>An explanation of why this Payment Program was last changed from Active to Inactive.</inlineHelpText>
    <label>Deactivation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>