force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Dedication_Text__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Dedication_Text__c</fullName>
    <description>A dedication message to accompany this Payment Plan.</description>
    <inlineHelpText>A dedication message to accompany this Payment Plan.</inlineHelpText>
    <label>Dedication Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>