force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Icon__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Icon__c</fullName>
    <formula>TEXT(OneCRM__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>