force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Initial_Recurrence_Amount__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Initial_Recurrence_Amount__c</fullName>
    <label>Initial Amount of Recurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>