force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Last_Auto_Advance_Time__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Auto_Advance_Time__c</fullName>
    <description>The last time this Payment Program was automatically advanced to the next Charge.</description>
    <inlineHelpText>The last time this Payment Program was automatically advanced to the next Charge.</inlineHelpText>
    <label>Last Auto Advance Time</label>
    <type>DateTime</type>
</CustomField>