force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Last_Card_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Card_Transaction_Status__c</fullName>
    <description>A status value describing the result of the last Credit Card transaction.</description>
    <inlineHelpText>A status value describing the result of the last Credit Card transaction.</inlineHelpText>
    <label>Last Card Transaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>