force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Memo__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Memo__c</fullName>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>