force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Next_Charge_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Charge_Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Credit Card from which each Payment will be drawn.</description>
    <inlineHelpText>The Credit Card from which each Payment will be drawn.</inlineHelpText>
    <label>Next Charge Credit Card</label>
    <referenceTo>OneCRM__Credit_Card__c</referenceTo>
    <relationshipLabel>Payment Programs</relationshipLabel>
    <relationshipName>Payment_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>