force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Next_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Charge_Date__c</fullName>
    <description>The Date to be used on the next Charge.</description>
    <inlineHelpText>The date on which the next payment will occur.</inlineHelpText>
    <label>Next Charge Date</label>
    <type>Date</type>
</CustomField>