force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Notes__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Notes__c</fullName>
    <description>Notes for this payment program.</description>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>