force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payment_Type__c</fullName>
    <description>The method by which payments are made.</description>
    <inlineHelpText>The method by which payments are made.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>