force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Payor__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The party from which the scheduled payments will come.</description>
    <inlineHelpText>The party from which the scheduled payments will come.</inlineHelpText>
    <label>Payor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Programs</relationshipLabel>
    <relationshipName>Payment_Programs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>