force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;Related_Contact__c&quot; field</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Programs</relationshipLabel>
    <relationshipName>Payment_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>