force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Schedule__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Schedule__c</fullName>
    <description>Determines how often payments will occur while this Payment Program is active. Time periods are relative to the Start Date.</description>
    <inlineHelpText>Determines how often payments will occur while this Payment Program is active. Time periods are relative to the Start Date.</inlineHelpText>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>