force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status__c</fullName>
    <description>Describes what is currently happening with this Payment Program.</description>
    <inlineHelpText>Describes what is currently happening with this Payment Program.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Auto Processing</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Creating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>