force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Total_Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Total_Estimated_Revenue__c</fullName>
    <description>The initial Recurrence amount multiplied by the initial Charge amount</description>
    <label>Total Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>