force-app/main/default/objects/OneCRM__Payment_Program__c/fields/OneCRM__Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>