force-app/main/default/objects/OneCRM__Payment_Program__c/recordTypes/OneCRM__Payment_Plan.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Payment_Plan</fullName>
    <active>true</active>
    <label>Payment Plan</label>
</RecordType>