force-app/main/default/objects/OneCRM__Payment_Program__c/recordTypes/OneCRM__Recurring_Charge.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Recurring_Charge</fullName>
    <active>true</active>
    <label>Recurring Charge</label>
</RecordType>