force-app/main/default/objects/OneCRM__Payment_Program__c/validationRules/OneCRM__Schedule_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Schedule_Required</fullName>
    <active>true</active>
    <description>You must select a Schedule.</description>
    <errorConditionFormula>ISPICKVAL( OneCRM__Schedule__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>OneCRM__Schedule__c</errorDisplayField>
    <errorMessage>You must select a value for Schedule.</errorMessage>
</ValidationRule>